--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'OpenSans', 'StratosSkyeng', sans-serif;
     font-size: 16px;
     min-height: 100vh;
     background-color: white;
